# easyminal

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: command_shortcuts.json
src-tauri/src/: main.rs
src/components/: CommandShortcut.vue  CommandShortcutWithInput.vue  CommandShortcuts.vue  Greet.vue  Terminal.vue  WebSnippets.vue
src/composables/: terminal.ts
src/router/: index.ts
src/views/: MainView.vue  SettingsView.vue
